# Treta

./: README.md  endpoints.ts
app/: config.py
backend/: pyproject.toml  railway.json  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: __init__.py  analytics.py  backtest.py  bot_logs.py  candles.py  dashboard.py  market.py  paper_accounts.py  risk_profiles.py  scheduler.py  signal_events.py  supervisor.py  trades.py  webhook.py  ws.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py  account_ledger.py  backtest.py  backtest_equity.py  bot_log.py  candle.py  paper_account.py  pending_order.py  risk_profile.py  signal_event.py  strategy.py  strategy_runtime_config.py  trade.py
backend/app/schemas/: analytics.py  backtest.py  fee_config.py  paper_account.py  risk_profile.py  trade.py
backend/app/services/: analytics_service.py  bot_log_service.py  candle_sync.py  fee_engine.py  market_data.py  market_data_service.py  market_regime.py  order_execution.py  position_supervisor.py  price_stream.py  pushover_service.py  risk_management.py  risk_service.py  scheduler_jobs.py  scheduler_service.py  strategy_engine.py  tp_sl_checker.py  trade_service.py  trading_capital.py
backend/app/services/strategies/: __init__.py  base.py  breakout.py  mean_reversion.py  trend_pullback.py
backend/scripts/: e2e_paper_bot.py  seed_short_experiment.py
backend/tests/: test_execution_market_with_tolerance.py  test_trading_capital.py
docs/: ANALITICAS_DIAGNOSTICO.md  BACKEND_REFACTOR_DEPLOY.md  CANDLES_QUALITY.md  (+21 more)
(+82 files in other folders)
